--- a/app/src/main/res/layout/fragment_addtodo.xml
+++ b/app/src/main/res/layout/fragment_addtodo.xml
@@ -122,7 +122,7 @@
                         android:textColor="@color/black"
                         android:textSize="15dp" />
 
-                    <me.hgj.jetpackmvvm.demo.app.weight.preference.MyColorCircleView
+                    <com.xysss.androidnews.app.weight.preference.MyColorCircleView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_gravity="center_vertical"
