--- a/app/src/main/res/layout/include_list.xml
+++ b/app/src/main/res/layout/include_list.xml
@@ -26,7 +26,7 @@
             android:visibility="invisible"
             app:elevation="5dp"
             app:fabSize="mini"
-            app:layout_behavior="me.hgj.jetpackmvvm.demo.app.weight.recyclerview.FatScrollAwareFABBehavior" />
+            app:layout_behavior="com.xysss.androidnews.app.weight.recyclerview.FatScrollAwareFABBehavior" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
