--- a/app/src/main/res/layout/item_ariticlenew.xml
+++ b/app/src/main/res/layout/item_ariticlenew.xml
@@ -122,7 +122,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_home_content" />
 
-        <me.hgj.jetpackmvvm.demo.app.weight.customview.CollectView
+        <com.xysss.androidnews.app.weight.customview.CollectView
             android:id="@+id/item_home_collect"
             android:layout_width="24dp"
             android:layout_height="24dp"
