--- a/app/src/main/res/layout/item_icon_preference_preview.xml
+++ b/app/src/main/res/layout/item_icon_preference_preview.xml
@@ -3,7 +3,7 @@
     android:layout_width="48dp"
     android:layout_height="48dp">
 
-    <me.hgj.jetpackmvvm.demo.app.weight.preference.MyColorCircleView
+    <com.xysss.androidnews.app.weight.preference.MyColorCircleView
         android:id="@+id/iv_preview"
         android:layout_width="44dp"
         android:layout_height="44dp"
