--- a/app/src/main/res/layout/item_todo_dialog.xml
+++ b/app/src/main/res/layout/item_todo_dialog.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <me.hgj.jetpackmvvm.demo.app.weight.preference.MyColorCircleView
+    <com.xysss.androidnews.app.weight.preference.MyColorCircleView
         android:id="@+id/item_todo_dialog_icon"
         android:layout_width="36dp"
         android:layout_height="36dp"/>
