--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,10 +2,10 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory
+    <com.xysss.androidnews.app.weight.preference.PreferenceCategory
         android:key="base"
         android:title="@string/setting_base">
-        <me.hgj.jetpackmvvm.demo.app.weight.preference.CheckBoxPreference
+        <com.xysss.androidnews.app.weight.preference.CheckBoxPreference
             android:key="top"
             android:summary="@string/setting_toptip"
             android:title="@string/setting_top" />
@@ -17,23 +17,23 @@
             android:summary="退出登录"
             android:title="@string/setting_exit" />
 
-    </me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory>
+    </com.xysss.androidnews.app.weight.preference.PreferenceCategory>
 
-    <me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory
+    <com.xysss.androidnews.app.weight.preference.PreferenceCategory
         android:key="other"
         android:title="@string/setting_other">
         <Preference
             android:key="mode"
             android:summary="@string/setting_modetip"
             android:title="@string/setting_mode" />
-        <me.hgj.jetpackmvvm.demo.app.weight.preference.IconPreference
+        <com.xysss.androidnews.app.weight.preference.IconPreference
             android:key="color"
             android:summary="@string/choose_theme_color_summary"
             android:title="@string/choose_theme_color" />
 
-    </me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory>
+    </com.xysss.androidnews.app.weight.preference.PreferenceCategory>
 
-    <me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory
+    <com.xysss.androidnews.app.weight.preference.PreferenceCategory
         android:key="about"
         android:title="@string/setting_about">
         <Preference
@@ -56,5 +56,5 @@
             android:key="copyRight"
             android:summary="@string/copyright_summary"
             android:title="@string/copyright" />
-    </me.hgj.jetpackmvvm.demo.app.weight.preference.PreferenceCategory>
+    </com.xysss.androidnews.app.weight.preference.PreferenceCategory>
 </androidx.preference.PreferenceScreen>
