--- a/app/src/main/res/navigation/main_navation.xml
+++ b/app/src/main/res/navigation/main_navation.xml
@@ -254,8 +254,8 @@
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
         <action
-            android:id="@+id/action_demoFragment_to_roomDemoFragment"
-            app:destination="@id/roomDemoFragment"
+            android:id="@+id/action_demoFragment_to_roomSimpleFragment"
+            app:destination="@id/roomSampleFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -294,8 +294,8 @@
         android:name="com.xysss.androidnews.ui.fragment.demo.DownLoadLibraryFragment"
         android:label="DownLoadLibraryFragment" />
     <fragment
-        android:id="@+id/roomDemoFragment"
+        android:id="@+id/roomSampleFragment"
         android:name="com.xysss.androidnews.ui.fragment.demo.room_db.RoomSampleFragment"
-        android:label="DownLoadLibraryFragment" />
+        android:label="RoomSampleFragment" />
 
 </navigation>
