--- a/app/src/main/res/navigation/main_navation.xml
+++ b/app/src/main/res/navigation/main_navation.xml
@@ -260,6 +260,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_demoFragment_to_FormFragment"
+            app:destination="@id/FormFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
@@ -297,5 +304,9 @@
         android:id="@+id/roomSampleFragment"
         android:name="com.xysss.androidnews.ui.fragment.demo.room_db.RoomSampleFragment"
         android:label="RoomSampleFragment" />
+    <fragment
+        android:id="@+id/FormFragment"
+        android:name="com.xysss.androidnews.ui.fragment.demo.form.FormFragment"
+        android:label="FormFragment" />
 
 </navigation>
