--- a/app/src/main/res/layout/fragment_demo.xml
+++ b/app/src/main/res/layout/fragment_demo.xml
@@ -87,5 +87,29 @@
                 android:textSize="15dp" />
         </androidx.cardview.widget.CardView>
 
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="12dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="@{()->click.formDemo()}"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="表单编辑"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </layout>
