--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="diverColoe">#cecece</color>
     <color name="accent">#E91E63</color>
     <color name="chinaHoliDay">#e10015</color>
-
+    <color name="textColor">#202020</color>
+    <color name="viewLineColor">#F0F0F0</color>
 </resources>
